# sapflux

./: .gitignore  CHANGELOG.md  Cargo.toml  DESCRIPTION  Dockerfile  README.md  convo.md  coolreport.toml  design.md  dirgrab.txt  docker-compose.override.yaml  docker-compose.yaml  docker-compose.yml  error_log.txt  error_log2.txt  error_log3.txt  gemini_comments.md  gemini_plan.md  justfile  justfile.example  manual_token_tester.R  notes.txt  plan.md  readin.R  record_number_outputs.toml  test_download.R  test_download2.R  test_parser.rs  timestamp_fixer_algo.md
.cargo/: config.toml
.claude/: settings.local.json
R/: calculate.R  external_file_util.R  get_deployments.R  id_determiners.R  readin_util.R
bugs/: bugfix_details.md  bugs.md
claude_attempt/examples/: test_parser.rs  test_scale_pipeline.rs
claude_attempt/scripts/: dst_bulletproof_validation.py  dst_correct_validation.py
code_reviews/: 10_gpt_5_thinking_high.md  11_gpt_5_thinking_high.md  12_gpt_5_thinking_high.md  1_gpt_5_thinking_high.md  2_gpt_5_thinking_high.md  3_gpt_5_thinking_high.md  4_gpt_5_thinking_high.md  5_gpt_5_thinking_high.md  6_gpt_5_thinking_high.md  7_gpt_5_thinking_high.md  8_gpt_5_thinking_high.md  9_gpt_5_thinking_high.md
crates/: Cargo.toml  dirgrab.txt
crates/sapflux/: Cargo.toml
crates/sapflux-admin/: Cargo.toml
crates/sapflux-admin/src/: main.rs
crates/sapflux-api/: Cargo.toml
crates/sapflux-api/src/: main.rs  routes.rs  state.rs
crates/sapflux-bucket/: Cargo.toml
crates/sapflux-bucket/src/: lib.rs
crates/sapflux-cli/: Cargo.toml
crates/sapflux-cli/src/: main.rs
crates/sapflux-cli/src/commands/: deployment.rs  mod.rs  seed.rs
crates/sapflux-cli/src/commands/seed/: deployments.rs  dst_transitions.rs  fixes.rs  mod.rs  parameters.rs  projects.rs  sensors.rs  types.rs
crates/sapflux-core/: Cargo.toml
crates/sapflux-core/migrations/: 0001_init.sql
crates/sapflux-core/processing/: legacy_format.rs  mod.rs  multi_sensor_format.rs  schema.rs
crates/sapflux-core/src/: calculator.rs  data_formats.rs  db.rs  error.rs  flatten.rs  ingestion.rs  lib.rs  metadata_enricher.rs  metadata_manifest.rs  object_gc.rs  object_store.rs  outputs.rs  parameter_resolver.rs  parsers.rs  pipelines.rs  processing.rs  quality_filters.rs  seed.rs  timestamp_fixer.rs  transactions.rs  types.rs  validation.rs
crates/sapflux-core/src/db/: mod.rs
crates/sapflux-core/src/metadata/: deployments.rs  mod.rs  parameters.rs  projects.rs  sensors.rs
crates/sapflux-core/src/processing/: correction.rs  legacy_format.rs  mod.rs  multi_sensor_format.rs  schema.rs  types.rs  unification.rs
crates/sapflux-core/src/rules/: dst_rules.rs  mod.rs
crates/sapflux-core/tests/: calculator.rs  db_seed.rs  flatten.rs  ingestion.rs  metadata_enricher.rs  metadata_manifest.rs  parameter_resolver.rs  pipeline.rs  quality_filters.rs  registries.rs  timestamp_fixer.rs  transactions.rs
crates/sapflux-parser/: Cargo.toml  README.md
crates/sapflux-parser/src/: errors.rs  lib.rs  model.rs  registry.rs  tests.rs
crates/sapflux-parser/src/formats/: common.rs  cr200_table.rs  cr300_hx.rs  cr300_legacy.rs  cr300_table.rs  mod.rs  sapflow_all.rs  schema.rs
crates/sapflux-processing/: Cargo.toml
crates/sapflux-processing/src/: lib.rs  pipeline.rs  timestamp_fix.rs
crates/sapflux-repository/: Cargo.toml
crates/sapflux-repository/migrations/: 0001_initial.sql
crates/sapflux-repository/src/: lib.rs  metadata.rs
crates/sapflux/src/: main.rs
crates/sapflux/tests/: object_store_s3.rs  transactions.rs
data/: constants.toml  dst_transitions.csv
db/: schema.sql
docs/: dev-compose.md
documents/: api.md  calculations.md  cli.md  config.md  gui.md  outputs.md  parsers.md  proposed_hosting_stack.md  timestamp_fixer_algo.md
examples/: test_scale_pipeline_lite.rs
exec/: deployments.R  download_data_from_gdrive.R  external_file_util.R  fix_time.R  get_data.R  get_deployments.R  load_constants.R  main.R  process_data_download.R  readin.R  readin_util.R  sensors.R  start_webdriver.R
firmware_source_code/old_programs/: CR300_sapflow.CR300
frontend/: package-lock.json
initial_metadata/: deployments.csv  deployments.toml  dst_transitions.toml  fixes.toml  parameters.toml  projects.toml  sensors.toml
integration_tests/: smoke.sh
integration_tests/output/: .gitignore
integration_tests/rileydata/: smoke.sh  smoke_full.py
integration_tests/smoke1/: smoke.sh
integration_tests/smoke_manifest/: smoke.sh
oldstuff/: .Rbuildignore  .gitignore  README.md  constants.toml  test_download3.R  test_with.R
oldstuff/R/: external_file_util.R  external_file_util_2.R  external_file_util_3.R  main.R
oldstuff/data/: constants.toml  deployments.csv  deployments_stemflow.csv  sensors.csv
oldstuff/sapflux/: Cargo.toml
oldstuff/sapflux/src/: error.rs  lib.rs  main.rs  types.rs
oldstuff/sapflux/src/parsers/: csv_parser.rs
oldstuff/sapflux/src/processing/: mod.rs
output/: processed_sap_flux_demo.parquet
planning/: agent_index.md  improve_parsers.md  plan.md  quality_dash_plan.md
planning/documents/: api.md  columnnames.toml  dataformat.md  design.md  metadata.md  pipeline.md  raw_data.md  transactions.md
planning/newdocs/: remaining.md
planning/notes/: admin_cli.md  comprehensive_outputs.md  config_and_secrets.md  data_column_conventions.md  data_format.md  database_data_types.md  logger_id.md  logging.md  (+2 more)
postgres_data/: postmaster.pid
progress_report/: status1.md  status10.md  status11.md  status12.md  status13.md  status14.md  status15.md  status16.md  status2.md  status3.md  status4.md  status5.md  status6.md  status7.md  status8.md  status9.md
scripts/: analyze_dst_algorithm.py  analyze_parquet.py  check_hashes_in_db.py  create_bucket.py  extract_files.py  failed_data_checker.py  find_manual_fixes.py  find_unwanted_hashes.py  generate_file_lists.py  inspect_parquet.py  investigate.py  project_review.py  quality.py  quality_dash.py  quality_pdf.py  record_number_evaluator.py  seed_database.py  smoke.sh  test_chunk_detection.py  verify_dst_correction.py
src/: lib.rs
tests/: testthat.R
(+636 files in other folders)
