[package]
name = "sapflux"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core async runtime and web framework
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"

# Database and SQL
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Serialization and time handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# CSV parsing and data processing
csv = "1.3"
polars = { version = "0.48.1", features = ["lazy", "temporal", "strings", "parquet"] }
serde_derive = "1.0"

# Error handling and utilities
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.0"

# Configuration and validation
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }

# Development dependencies
[dev-dependencies]
tempfile = "3.0"
