# ./crates/Cargo.toml

[workspace]
members = [
    "crates/sapflux-parser",
]
resolver = "2" 

[workspace.dependencies]
polars = { version = "0.48.1", features = ["lazy", "polars-io", "strings", "temporal", "parquet", "json", "pivot", "regex", "asof_join", "semi_anti_join"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "derive", "json", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive", "rc"] }
csv = "1.3"
glob = "0.3"
sha2 = "0.10"
clap = { version = "4.0", features = ["derive"]}
axum = { version = "0.8.4"}
uuid = { version = "1.0", features = ["v4", "serde"] } # don't take my uuid i'm using this one 
chrono = { version = "0.4.41" }
dotenvy = "0.15"
futures = { version = "0.3" }
serde_json = { version = "1.0.140" }
comfy-table = "7.1.0"
toml = "0.8"