[workspace]
members = [
    "crates/sapflux-core",
    "crates/sapflux",
    "crates/sapflux-admin",
    "crates/sapflux-parser",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Sapflux Project"]

[workspace.dependencies]
polars = { version = "0.48.1", features = ["lazy", "polars-io", "strings", "temporal", "parquet", "json", "pivot", "regex", "asof_join", "semi_anti_join"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "derive", "json", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive", "rc"] }
csv = "1.3"
glob = "0.3"
sha2 = "0.10"
clap = { version = "4.0", features = ["derive"] }
axum = { version = "0.8.4" }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10"
dotenvy = "0.15"
futures = { version = "0.3" }
serde_json = { version = "1.0.140" }
comfy-table = "7.1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
blake3 = "1"
once_cell = "1.20"
tower = "0.5"
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
