# ./crates/Cargo.toml

[workspace]
# This lists all the Rust crates that are part of our monorepo
members = [
    "sapflux-core",
    "sapflux-cli",
    "sapflux-api",
]
resolver = "2" # Use the modern dependency resolver

# Define all shared dependencies here ONCE.
# Sub-crates will inherit these versions.
[workspace.dependencies]
polars = { version = "0.48.1", features = ["lazy", "strings", "temporal", "parquet", "json"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "derive"] }
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
glob = "0.3"
sha2 = "0.10"

# CLI-specific dependencies
clap = { version = "4.0", features = ["derive"]}

# API-specific dependencies
axum = { version = "0.8.4"}

# don't take my uuid i'm using this one 
uuid = { version = "1.0", features = ["v4", "serde"] }

chrono = { version = "0.4.41" }

dotenvy = "0.15"

futures = { version = "0.3" }