[package]
name = "sapflux-admin"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sapflux-admin"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
sapflux-core = { path = "../sapflux-core" }
tokio = { workspace = true, optional = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["runtime"]
runtime = ["tokio"]
