[package]
name = "sapflux-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true, features = ["macros", "json"] }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sapflux-repository = { path = "../sapflux-repository" }
sapflux-processing = { path = "../sapflux-processing" }
sapflux-bucket = { path = "../sapflux-bucket" }
sapflux-parser = { path = "../sapflux-parser" }
chrono = { workspace = true }
uuid = { workspace = true }
blake3 = "1.8.2"
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "postgres"] }
