[package]
name = "sapflux-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# Depend on our core library
sapflux-core = { path = "../sapflux-core" }

# Inherit shared dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
glob = { workspace = true }
futures = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
comfy-table = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }