[package]
name = "sapflux-processing"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1"
anyhow = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
polars = { workspace = true }
sapflux-parser = { path = "../sapflux-parser" }
sapflux-repository = { path = "../sapflux-repository" }
sapflux-bucket = { path = "../sapflux-bucket" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
