[package]
name = "sapflux-repository"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
