[package]
name = "sapflux"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sapflux"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
sapflux-core = { path = "../sapflux-core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
