[package]
name = "sapflux"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sapflux"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
sapflux-core = { path = "../sapflux-core", features = ["runtime"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
axum = { workspace = true, features = ["macros"] }
serde = { workspace = true, features = ["derive"] }
base64 = "0.22.1"
