[package]
name = "sapflux"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sapflux"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
sapflux-core = { path = "../sapflux-core", features = ["runtime"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
axum = { workspace = true, features = ["macros", "multipart"] }
serde = { workspace = true, features = ["derive"] }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
sqlx = { workspace = true, features = ["postgres"] }
tower = { workspace = true }
hyper = { workspace = true }
http-body-util = { workspace = true }
