[package]
name = "sapflux"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version = "0.48.1", features = ["lazy", "strings", "temporal", "parquet"] }
anyhow = "1.0"
thiserror = "2.0.12"
tokio = { version = "1.0", features = ["full"] }
glob = "0.3" # Useful for finding files
serde = {version = "1.0.219", features = ["derive"]}
